# uncoupled

./: LICENSE  NOTES.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yml
example/: basic.py  resolver.py
src/dipy/: __init__.py  container.py  exception.py
src/dipy/providers/: provider.py  scoped.py  singleton.py  transient.py
src/uncoupled/: container.py  exception.py  lifetime.py
src/uncoupled/providers/: provider.py  scoped.py  singleton.py  transient.py
tests/: test_container.py  test_depends.py  test_depends_scoped.py  test_scoped.py  test_singleton.py  test_transient.py
